    This interface were considered as deprecated since over 2 years,
     it's time to inform our users that it is.
    Switch to MSG_task_{send,recv} instead, or declare
     SIMGRID_DEPRECATED before loading the msg.h if you really need to
     use these (crappy) functions in your code.
    These functions will be removed at some point. Stop using them now.

  Simix:
  * Stabilize the parallel execution mode of user contexts
  * Introduce configuration variables to control parallel execution:
    - contexts/synchro: Synchronization mode to use when running
      contexts in parallel (either futex, posix or busy_wait)
    - contexts/parallel_threshold: Minimal number of user contexts
      to be run in parallel (raw contexts only)

  SURF:
  * Introduce a parallel mode for the models (see surf/nthreads
     configuration item). In our tests, running the models in parallel
     never lead to any speedups because they are so fast that the gain
     of computing each model in parallel does not amortizes the
     synchronization costs, even when ultra fast futexes are used.
    This is released anyway because YMMV.

  SimDag:
  * Performance boost by using a swag internally to compute the set of
    tasks that are finished and should constitute the return value of
    SD_simulate.

  SMPI:
  * Enable it by default now that it is considered rather stable.

  XBT:
  * Mallocators: allow value NULL for the reset function.
  * Dicts:
    - New function xbt_dict_new_homogeneous(void(*)(void*)) to
      create homogeneous dictionaries, where all the elements share the
      same free function. Non homogeneous dictionaries will be
      deprecated in the next release.
    - Dicts of scalar elements (xbt_dicti_*) are deprecated.
    - Multi-level dictionaries are deprecated.
  * mmalloc module:
    - cleanups and simplifications to make it maintainable again
    - exotic features (such as memalign and valloc) were removed