@@ -12,7 +12,8 @@
 int host(int argc, char *argv[]);
 unsigned int task_comp_size = 50000000;
 unsigned int task_comm_size = 1000000;
-int number_of_hosts;
+
+xbt_dynar_t hosts; /* All declared hosts */
 
 XBT_LOG_NEW_DEFAULT_CATEGORY(ring,
                              "Messages specific for this msg example");
@@ -40,7 +41,7 @@ int host(int argc, char *argv[])
     xbt_assert(res == MSG_OK, "MSG_task_get failed");
     XBT_INFO("Host \"%d\" received \"%s\"",host_number, MSG_task_get_name(task));
 
-    if(host_number+1 == number_of_hosts )
+    if(host_number+1 == xbt_dynar_length(hosts) )
       sprintf(mailbox, "0");
     else
       sprintf(mailbox, "%d", host_number+1);
@@ -55,18 +56,17 @@ int main(int argc, char **argv)
 	int i,res;
   MSG_global_init(&argc, argv);
   MSG_create_environment(argv[1]);
-  m_host_t *host_table =  MSG_get_host_table();
-  number_of_hosts = MSG_get_host_number();
+  hosts =  MSG_hosts_as_dynar();
   MSG_function_register("host", host);
 
-  XBT_INFO("Number of host '%d'",number_of_hosts);
-  for(i = 0 ; i<number_of_hosts; i++)
+  XBT_INFO("Number of host '%zu'",xbt_dynar_length(hosts));
+  for(i = 0 ; i<xbt_dynar_length(hosts); i++)
   {
     char* name_host = bprintf("%d",i);
-    MSG_process_create( name_host, host, NULL, host_table[i] );
+    MSG_process_create( name_host, host, NULL, xbt_dynar_get_as(hosts,i,m_host_t) );
     free(name_host);
   }
-  xbt_free(host_table);
+  xbt_dynar_free(&hosts);
 
   res = MSG_main();
   XBT_INFO("Simulation time %g", MSG_get_clock());
